[package]
name = "mesh_scratch"
version = "0.1.0"
authors = ["Chris Hodapp <hodapp87@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
# Unoptimized debug builds are too slow to profile
# having debug info doesn't hurt perf for now
debug = true

[dependencies]
euclid = "0.20.7"
nalgebra = "0.19.0"
stl_io = "0.4.2"
rand = "0.7.3"
